tests/rosetta/out/Fortran/assertions.error
gfortran error: exit status 1
/workspace/mochi/tests/rosetta/out/Fortran/assertions.f90:5:3:

    5 |   main()
      |   1
Error: Unclassifiable statement at (1)
