tests/rosetta/out/Fortran/assertions.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:39Z
program assertions
  implicit none
    integer :: x
  main()
  contains
  recursive integer function main() result(res)
    x = 43
    if ((x /= 42)) then
      print *, 'Assertion failed'
    else
      print *, 'Assertion passed'
    end if
  end function main
end program assertions
